# trading-studio

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
doc/: AI Prompt 规范.md  OpenAPI 接口文档.yaml  PRD.md  Trading-Studio产品技术文档.docx  功能清单.md  合规检查清单.md  数据库详细设计.md  数据质量规范.md  新闻源接入规范.md  测试用例.md  部署运维手册.md
scripts/: bootstrap-local.sh  run-api.sh  (+4 more)
services/intelligence/: Dockerfile  README.md  pyproject.toml
services/intelligence/app/: __init__.py  main.py
services/intelligence/app/api/: __init__.py
services/intelligence/app/api/routes/: data_sync.py  health.py
services/intelligence/app/core/: config.py  database.py
services/intelligence/app/models/: __init__.py  event_chain.py  event_source.py  index_daily_bar.py  market_daily_bar.py  market_event.py  market_index.py  market_quote.py  news_article.py  news_article_content.py  news_article_security.py  news_source.py  security.py  signal_performance_snapshot.py  signal_rule.py  trading_signal.py
services/intelligence/app/providers/: __init__.py  market.py  news.py
services/intelligence/app/schemas/: __init__.py  market_sync.py  news_sync.py  security_sync.py
services/intelligence/app/services/: announcement_detail.py  announcement_normalization.py  announcement_structuring.py  event_chain.py  market_sync.py  news_sync.py  security_sync.py  signal_engine.py  signal_insight.py
services/intelligence/tests/: test_announcement_detail.py  test_announcement_normalization.py  test_announcement_structuring.py  test_event_chain.py  test_signal_engine.py  test_signal_insight.py
(+123 files in other folders)
