[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-studio-intelligence"
version = "0.1.0"
description = "FastAPI data and intelligence service for Trading Studio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "akshare>=1.16.72",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "pandas>=2.3.1",
  "pypdf>=5.8.0",
  "pydantic-settings>=2.10.1",
  "pymysql>=1.1.1",
  "sqlalchemy>=2.0.41",
  "tenacity>=9.1.2",
  "uvicorn[standard]>=0.35.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
